k8s-rewrite/02-applications/plex/deployment.yaml
# Plex Media Server Deployment
# Converts from Docker Swarm docker-compose.yml to Kubernetes Deployment
# Note: This deployment requires a node with NVIDIA GPU support for hardware transcoding

---
apiVersion: v1
kind: Namespace
metadata:
  name: plex
---
# Plex Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: plex
  labels:
    app: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
        branconet.io/type: system
        homepage.group: Media
        homepage.name: Plex
        homepage.icon: "https://plex.tv/sites/static/img/logo.png"
        homepage.href: "http://plex.branconet.local/"
        homepage.description: Plex Media Server
    spec:
      containers:
      - name: plex
        image: lscr.io/linuxserver/plex:latest
        ports:
        - containerPort: 32400
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: tv
          mountPath: /tv
        - name: movies
          mountPath: /movies
        - name: pvr
          mountPath: /pvr
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 2000m
            memory: 4Gi
      # GPU device request for hardware transcoding
      tolerations:
      - key: nvidia.com/gpu
        operator: Exists
        effect: NoSchedule
---
# Plex Service
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
spec:
  type: ClusterIP
  ports:
  - port: 32400
    targetPort: 32400
    name: http
  selector:
    app: plex
---
# Traefik Ingress Route for Plex
apiVersion: traefik.containo.dev/v1alpha1
kind: IngressRoute
metadata:
  name: plex-ingress
  namespace: plex
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`plex.branconet.local`)
    kind: Service
    services:
    - name: plex
      port: 32400
  middlewares:
  - name: tls-redirect
    passHostHeader: true
    stripPrefix:
      prefixMatch: ""
